--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
 		"typescript": "^4.5.2"
 	},
 	"dependencies": {
+		"dotenv": "^16.4.7",
 		"express": "^4.17.1",
+		"mongodb": "^6.11.0",
 		"zod": "^3.23.8"
 	}
 }
