--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 	"main": "dist/server.js",
 	"scripts": {
 		"start": "tsc && node dist/server.js",
+		"dev": "nodemon src/server.ts",
 		"lint": "eslint . --ext .ts",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
@@ -16,6 +17,7 @@
 		"@typescript-eslint/eslint-plugin": "^5.4.0",
 		"@typescript-eslint/parser": "^5.4.0",
 		"eslint": "^8.3.0",
+		"nodemon": "^3.1.7",
 		"typescript": "^4.5.2"
 	},
 	"dependencies": {
