--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"typescript": "^4.5.2"
 	},
 	"dependencies": {
+		"cors": "^2.8.5",
 		"dotenv": "^16.4.7",
 		"express": "^4.17.1",
 		"mongodb": "^6.11.0",
